--- a/app/src/main/res/layout/fragment_breeding_stock_view.xml
+++ b/app/src/main/res/layout/fragment_breeding_stock_view.xml
@@ -55,10 +55,10 @@
 
 
                     <ImageView
-                        android:id="@+id/search"
+                        android:id="@+id/breeding_stock_search"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:layout_gravity="start"
                         android:layout_marginStart="10dp"
@@ -69,7 +69,7 @@
                         android:layout_height="44dp"
                         android:paddingStart="@dimen/dimen_10dp"
                         android:layout_centerVertical="true"
-                        android:layout_toEndOf="@+id/search" />
+                        android:layout_toStartOf="@+id/breeding_stock_search" />
 
                 </RelativeLayout>
 
