--- a/app/src/main/res/layout/fragment_add_crop.xml
+++ b/app/src/main/res/layout/fragment_add_crop.xml
@@ -22,7 +22,6 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
 
-
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -35,23 +34,6 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dimen_20dp"
                 android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="@dimen/dimen_20dp">
-                <TextView
-                    android:id="@+id/crop_action_txt"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_add_crop"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:textColor="@color/blackText"/>
-
-            </LinearLayout>
 
 
 
@@ -231,16 +213,39 @@
                             android:layout_marginBottom="4dp"
                             android:textSize="@dimen/dimen_16sp"/>
 
-                        <EditText
-                            android:id="@+id/txt_crops_date_sown"
+
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:ems="10"
-                            android:inputType="date"
-                            android:focusable="false"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:background="@drawable/edittext_corner"
-                            />
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/txt_crops_date_sown"
+                                android:layout_width="match_parent"
+                                android:layout_height="50dp"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:background="@android:color/transparent"
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:inputType="none"
+                                android:textSize="14sp"
+                                android:layout_marginRight="10dp"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_calendar_add" />
+
+                        </RelativeLayout>
+
 
                     </LinearLayout>
                     <LinearLayout
