--- a/app/src/main/res/layout/fragment_agronomy_home.xml
+++ b/app/src/main/res/layout/fragment_agronomy_home.xml
@@ -1,22 +1,29 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.agronomy.AgronomyHomeFragment"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.myfarmnow.myfarmcrop.fragments.agronomy.AgronomyHomeFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-
-
-        <LinearLayout
-
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_agronomy_home"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
         <RelativeLayout
@@ -25,56 +32,33 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/mainView"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimary"
-                android:theme="@style/AppTheme.AppBarOverlay">
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-
-                </androidx.appcompat.widget.Toolbar>
-
-            </com.google.android.material.appbar.AppBarLayout>
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/mainView"
                 android:background="@drawable/home_background">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
                     android:layout_gravity="center_vertical"
+                    android:orientation="vertical"
                     android:paddingLeft="@dimen/dimen_20dp"
                     android:paddingRight="@dimen/dimen_20dp">
 
-
                     <LinearLayout
                         android:id="@+id/buttons"
-                        android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_alignParentTop="true"
                         android:orientation="vertical">
-
-
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:background="@drawable/background_round_white">
-
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
                                 android:id="@+id/layout_crop_dashboard_crops"
@@ -91,9 +75,9 @@
                                 <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/ic_crop_records"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_crop_records" />
 
                                 <TextView
                                     android:id="@+id/tv_matings"
@@ -106,20 +90,17 @@
                                     android:textAllCaps="true"
                                     android:textColor="#000000"
                                     android:textStyle="bold" />
-
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_20dp"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/dimen_20dp"
-                            android:background="@drawable/background_round_white">
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
                                 android:id="@+id/layout_crop_dashboard_inventory"
@@ -136,9 +117,9 @@
                                 <ImageView
                                     android:layout_width="160dp"
                                     android:layout_height="90dp"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/ic_livestock"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_livestock" />
 
                                 <TextView
                                     android:id="@+id/tv_litar"
@@ -153,7 +134,6 @@
                                     android:textColor="#000"
                                     android:textStyle="bold" />
 
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
@@ -161,14 +141,14 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_20dp"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/dimen_20dp"
-                            android:background="@drawable/background_round_white">
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
-                                android:id="@+id/layout_inventory_store"
+                                android:id="@+id/layout_ask_agronomist"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
@@ -179,9 +159,9 @@
                                 <ImageView
                                     android:layout_width="160dp"
                                     android:layout_height="90dp"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/ic_baseline_call_24"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_baseline_call_24" />
 
                                 <TextView
                                     android:layout_width="match_parent"
@@ -193,24 +173,13 @@
                                     android:textAllCaps="true"
                                     android:textColor="#000"
                                     android:textStyle="bold" />
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
-
-
-
-
                     </LinearLayout>
-
-
-
 
                 </RelativeLayout>
             </ScrollView>
-
-
 
 
             <FrameLayout
@@ -240,9 +209,7 @@
                         app:tabIndicatorColor="@color/green_mh"
                         app:tabIndicatorHeight="0dp"
                         app:tabSelectedTextColor="@color/black"
-                        app:tabTextColor="@color/black"
-
-                        ></com.google.android.material.tabs.TabLayout>
+                        app:tabTextColor="@color/black" />
 
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPager"
@@ -252,20 +219,11 @@
                     </androidx.viewpager.widget.ViewPager>
                 </LinearLayout>
 
-
             </FrameLayout>
-
 
 
         </RelativeLayout>
 
-        </LinearLayout>
+    </LinearLayout>
 
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
