--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -195,7 +195,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="90dp"
                             android:padding="20dp"
-                            android:src="@drawable/ic_financial_records" />
+                            android:src="@drawable/ic_medical" />
 
                         <TextView
                             android:layout_width="match_parent"
