--- a/app/src/main/res/layout/fragment_add_crop_notes.xml
+++ b/app/src/main/res/layout/fragment_add_crop_notes.xml
@@ -74,6 +74,7 @@
                             android:layout_marginRight="10dp"/>
 
                         <ImageView
+                            android:id="@+id/date_picker_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
