--- a/app/src/main/res/layout/fragment_add_financial_record.xml
+++ b/app/src/main/res/layout/fragment_add_financial_record.xml
@@ -84,7 +84,7 @@
                             android:layout_gravity="center"
                             android:layout_marginEnd="8dp"
                             android:layout_marginRight="10dp"
-                            android:src="@drawable/ic_calendar" />
+                            android:src="@drawable/ic_calendar_add" />
 
                     </RelativeLayout>
                 </LinearLayout>
