--- a/app/src/main/res/layout/breeding_stock_list_item.xml
+++ b/app/src/main/res/layout/breeding_stock_list_item.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/margin_10"
+    android:layout_marginStart="15dp"
     android:layout_marginTop="5dp"
-    android:layout_marginEnd="@dimen/margin_10"
+    android:layout_marginEnd="15dp"
     android:layout_marginBottom="5dp"
     android:background="@color/gray"
     app:cardElevation="@dimen/margin_10">
@@ -417,7 +417,6 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
-                android:paddingEnd="@dimen/margin_10"
                 android:text="OFFSPRING"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
