--- a/app/src/main/res/layout/crop_inventory_list_card.xml
+++ b/app/src/main/res/layout/crop_inventory_list_card.xml
@@ -27,7 +27,7 @@
                     android:background="@drawable/input_shapes_crops_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_margin="10dp"
                     >
 
                     <LinearLayout
