--- a/app/src/main/res/layout/crop_notes_list_card.xml
+++ b/app/src/main/res/layout/crop_notes_list_card.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="20dp"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -32,7 +32,7 @@
             <View
                 android:id="@+id/line"
                 android:layout_width="2dp"
-                android:layout_height="80dp"
+                android:layout_height="100dp"
                 android:background="@color/colorPrimary"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/img_checked"
@@ -44,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/dimen_5dp"
             android:layout_marginBottom="5dp"
             android:padding="0dp"
             android:layout_weight="0.1"
@@ -56,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="@dimen/dimen_10dp">
                     <LinearLayout
