--- a/app/src/main/res/layout/fragment_breeding_stock_view.xml
+++ b/app/src/main/res/layout/fragment_breeding_stock_view.xml
@@ -31,9 +31,109 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            android:layout_marginBottom="@dimen/dimen_10dp"
+            android:layout_margin="@dimen/dimen_10dp"
             android:background="@drawable/crop_card_border">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sort_by"
+                android:textSize="@dimen/dimen_16sp"
+                android:textStyle="bold"
+                android:layout_margin="@dimen/dimen_10dp"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="1">
+                    <LinearLayout
+                        android:id="@+id/btn_filter_by_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:layout_margin="@dimen/dimen_5dp"
+                        android:background="@drawable/crop_card_button_black">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Name"
+                            android:textAllCaps="true"
+                            android:textStyle="bold"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:layout_margin="2dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/btn_filter_by_breed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:layout_margin="@dimen/dimen_5dp"
+                        android:background="@drawable/crop_card_button_black">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Breed"
+                            android:textAllCaps="true"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:layout_margin="2dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/btn_filter_by_dob"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:layout_margin="@dimen/dimen_5dp"
+                        android:background="@drawable/crop_card_button_black">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="DOB"
+                            android:textAllCaps="true"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:layout_margin="2dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/btn_filter_by_sex"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:layout_margin="@dimen/dimen_5dp"
+                        android:background="@drawable/crop_card_button_black">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Sex"
+                            android:textAllCaps="true"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:layout_margin="2dp"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,6 +168,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingStart="@dimen/dimen_10dp"
+                        android:hint="@string/search"
                         android:layout_centerVertical="true"
                         android:background="@color/transparent"
                         android:layout_toStartOf="@+id/breeding_stock_search" />
@@ -79,105 +180,7 @@
 
 
         </LinearLayout>
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/sort_by"
-           android:layout_margin="@dimen/dimen_10dp"/>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp">
 
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
-                <LinearLayout
-                    android:id="@+id/btn_filter_by_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    android:layout_margin="@dimen/dimen_5dp"
-                    android:background="@drawable/crop_card_button_black">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Name"
-                        android:textAllCaps="true"
-                        android:textStyle="bold"
-                        android:gravity="center_horizontal"
-                        android:textColor="@color/white"
-                        android:layout_margin="2dp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/btn_filter_by_breed"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    android:layout_margin="@dimen/dimen_5dp"
-                    android:background="@drawable/crop_card_button_black">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Breed"
-                        android:textAllCaps="true"
-                        android:gravity="center_horizontal"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:layout_margin="2dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/btn_filter_by_dob"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    android:layout_margin="@dimen/dimen_5dp"
-                    android:background="@drawable/crop_card_button_black">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="DOB"
-                        android:textAllCaps="true"
-                        android:gravity="center_horizontal"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:layout_margin="2dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/btn_filter_by_sex"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    android:layout_margin="@dimen/dimen_5dp"
-                    android:background="@drawable/crop_card_button_black">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Sex"
-                        android:textAllCaps="true"
-                        android:gravity="center_horizontal"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:layout_margin="2dp"/>
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
 
         </LinearLayout>
 
