--- a/app/src/main/res/layout/fragment_financial_records.xml
+++ b/app/src/main/res/layout/fragment_financial_records.xml
@@ -30,7 +30,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/crop_income_expense_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dimen_10dp"/>
 
     </ScrollView>
 
