--- a/app/src/main/res/layout/medication_list_item.xml
+++ b/app/src/main/res/layout/medication_list_item.xml
@@ -41,7 +41,10 @@
     android:id="@+id/medication_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
+    android:layout_marginEnd="@dimen/dimen_10dp"
     android:background="@color/gray"
     app:cardElevation="@dimen/dimen_5dp"
     app:layout_constraintTop_toTopOf="parent"
