--- a/app/src/main/res/layout/fragment_crop_harvest.xml
+++ b/app/src/main/res/layout/fragment_crop_harvest.xml
@@ -97,7 +97,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_centerVertical="true"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_calendar" />
+                            android:src="@drawable/ic_calendar_add" />
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -271,6 +271,7 @@
                         android:textSize="14sp"/>
 
                     <ImageView
+                        android:id="@+id/harvest_date_sold_date_picker"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -457,6 +458,7 @@
                         android:textSize="14sp"/>
 
                     <ImageView
+                            android:id="@+id/date_stored_date_picker"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
