--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -128,7 +128,7 @@
                     android:background="@drawable/edittext_corner"
                     android:orientation="horizontal">
 
-                    <Spinner
+                    <AutoCompleteTextView
                         android:id="@+id/sp_crop_spraying_name"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -136,7 +136,6 @@
                         android:layout_gravity="center"
                         android:background="@android:color/transparent"
                         android:gravity="center"
-                        android:entries="@array/crop_spray_name"
                         android:spinnerMode="dropdown"/>
 
                     <ImageView
