--- a/app/src/main/res/layout/fragment_add_crop_notes.xml
+++ b/app/src/main/res/layout/fragment_add_crop_notes.xml
@@ -1,126 +1,122 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.AddCropNotesFragment">
-<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.AddCropNotesFragment">
+
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_add_crop_notes_fragment"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-
-        </androidx.appcompat.widget.Toolbar>
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="match_parent">
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="15dp"
                     android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="15dp">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/date"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="@dimen/dimen_16sp"/>
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:background="@drawable/edittext_corner"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="15dp"
+                        android:orientation="vertical">
 
-                        <EditText
-                            android:id="@+id/txt_crop_note_date"
+                        <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="center"
-                            android:background="@android:color/transparent"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:inputType="none"
-                            android:textSize="14sp"
-                            android:layout_marginRight="10dp"/>
-
-                        <ImageView
-                            android:id="@+id/date_picker_image"
-                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_calendar_add" />
+                            android:layout_marginBottom="4dp"
+                            android:text="@string/date"
+                            android:textSize="@dimen/dimen_16sp" />
 
-                    </RelativeLayout>
-                </LinearLayout>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/edittext_corner"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/txt_crop_note_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="50dp"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="10dp"
+                                android:background="@android:color/transparent"
+                                android:inputType="none"
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:textSize="14sp" />
+
+                            <ImageView
+                                android:id="@+id/date_picker_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginRight="10dp"
+                                android:src="@drawable/ic_calendar_add" />
+
+                        </RelativeLayout>
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/layout_crop_note_category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginBottom="5dp"
-                        android:visibility="gone"
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
-                        >
                         <TextView
-
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Category"
+                            android:layout_weight="0.3"
                             android:gravity="center_vertical"
+                            android:text="Category"
                             android:textColor="@color/textColor"
-                            android:textSize="15sp"
-                            android:layout_weight="0.3"/>
+                            android:textSize="15sp" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes_grey_spinner"
-                            >
+                            android:background="@drawable/input_shapes_grey_spinner">
+
                             <Spinner
                                 android:id="@+id/sp_crop_note_category"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:ems="10"
-                                android:hint="Enter.."
-                                android:entries="@array/crop_notes_category"
                                 android:layout_weight="0.7"
-                                android:textSize="14sp"
-                                />
+                                android:ems="10"
+                                android:entries="@array/crop_notes_category"
+                                android:hint="Enter.."
+                                android:textSize="14sp" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -128,66 +124,61 @@
                         android:id="@+id/layout_other_category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginBottom="5dp"
-                        android:visibility="gone"
-                        >
-                        <TextView
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
                             android:text="Specify Category"
                             android:textColor="@color/textColor"
-                            android:textSize="15sp"
-                            android:layout_weight="0.3"/>
+                            android:textSize="15sp" />
 
                         <EditText
                             android:id="@+id/txt_crop_note_category_other"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0.7"
+                            android:background="@drawable/input_shapes"
                             android:ems="10"
                             android:hint="Enter.."
-                            android:background="@drawable/input_shapes"
-                            android:layout_weight="0.7"
-                            android:textSize="14sp"
-                            />
+                            android:textSize="14sp" />
 
                     </LinearLayout>
-
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-
-
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginBottom="@dimen/dimen_20dp">
+                        android:layout_marginBottom="@dimen/dimen_20dp"
+                        android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/description"
                             android:layout_marginBottom="4dp"
-                            android:textSize="@dimen/dimen_16sp"/>
+                            android:text="@string/description"
+                            android:textSize="@dimen/dimen_16sp" />
+
                         <EditText
                             android:id="@+id/txt_crop_note_description"
                             android:layout_width="match_parent"
                             android:layout_height="100dp"
-                            android:gravity="start"
-                            android:textColor="@color/black"
-                            android:textSize="14sp"
-                            android:inputType="textMultiLine"
                             android:background="@drawable/edittext_corner"
-                            android:padding="@dimen/dimen_10dp"/>
-
+                            android:gravity="start"
+                            android:inputType="textMultiLine"
+                            android:padding="@dimen/dimen_10dp"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
                     </LinearLayout>
-
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -203,10 +194,10 @@
                             android:layout_weight="1"
                             android:background="@color/transparent"
                             android:text="save"
-                            android:textStyle="bold"
                             android:textAllCaps="true"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/button_text_size" />
+                            android:textSize="@dimen/button_text_size"
+                            android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="30dip"
@@ -215,15 +206,12 @@
                             android:layout_centerVertical="true"
                             android:layout_gravity="right|center_vertical"
                             android:layout_margin="10dip"
-                            android:src="@drawable/ic_right_arrow">
-                        </ImageView>
+                            android:src="@drawable/ic_right_arrow" />
                     </FrameLayout>
-
 
                 </LinearLayout>
             </ScrollView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
