--- a/app/src/main/res/layout/fragment_sell_produce.xml
+++ b/app/src/main/res/layout/fragment_sell_produce.xml
@@ -1,104 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context="com.myfarmnow.myfarmcrop.fragments.marketplace.SellProduceFragment">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/gray">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_marginTop="?attr/actionBarSize"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout_sell_produce_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:background="@color/colorPrimary"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/opaqueWhite"
+            app:tabIndicatorHeight="4dp"
+            app:tabMaxWidth="0dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextAppearance="@style/textAppearance_view_pager"
+            app:tabTextColor="@color/opaqueWhite" />
 
+    </com.google.android.material.appbar.AppBarLayout>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabIndicatorHeight="4dp"
-                android:background="@color/colorPrimary"
-                app:tabGravity="fill"
-                app:tabIndicatorColor="@color/opaqueWhite"
-                app:tabMaxWidth="0dp"
-                app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/white"
-                app:tabTextAppearance="@style/textAppearance_view_pager"
-                app:tabTextColor="@color/opaqueWhite" />
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager_sell_produce_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </com.google.android.material.appbar.AppBarLayout>
+    </androidx.viewpager.widget.ViewPager>
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <!--        <ScrollView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:layout_marginTop="?attr/actionBarSize"-->
+    <!--            android:background="@color/gray"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent">-->
 
-        </androidx.viewpager.widget.ViewPager>
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:orientation="vertical">-->
 
-        <!--        <ScrollView-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:layout_marginTop="?attr/actionBarSize"-->
-        <!--            android:background="@color/gray"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent">-->
+    <!--                <androidx.cardview.widget.CardView-->
+    <!--                    android:id="@+id/sell_produce"-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_marginStart="@dimen/dimen_20dp"-->
+    <!--                    android:layout_marginTop="@dimen/dimen_20dp"-->
+    <!--                    android:layout_marginEnd="@dimen/dimen_20dp"-->
+    <!--                    android:layout_marginBottom="@dimen/dimen_20dp"-->
+    <!--                    app:cardCornerRadius="@dimen/dimen_5dp"-->
+    <!--                    app:cardElevation="@dimen/dimen_5dp">-->
 
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:orientation="vertical">-->
+    <!--                    <LinearLayout-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:background="@color/white"-->
+    <!--                        android:orientation="vertical">-->
 
-        <!--                <androidx.cardview.widget.CardView-->
-        <!--                    android:id="@+id/sell_produce"-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_marginStart="@dimen/dimen_20dp"-->
-        <!--                    android:layout_marginTop="@dimen/dimen_20dp"-->
-        <!--                    android:layout_marginEnd="@dimen/dimen_20dp"-->
-        <!--                    android:layout_marginBottom="@dimen/dimen_20dp"-->
-        <!--                    app:cardCornerRadius="@dimen/dimen_5dp"-->
-        <!--                    app:cardElevation="@dimen/dimen_5dp">-->
+    <!--                        <ImageView-->
+    <!--                            android:layout_width="wrap_content"-->
+    <!--                            android:layout_height="wrap_content"-->
+    <!--                            android:layout_gravity="center"-->
+    <!--                            android:layout_marginTop="@dimen/margin_15"-->
+    <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+    <!--                            android:src="@drawable/ic_sell_produce" />-->
 
-        <!--                    <LinearLayout-->
-        <!--                        android:layout_width="match_parent"-->
-        <!--                        android:layout_height="wrap_content"-->
-        <!--                        android:background="@color/white"-->
-        <!--                        android:orientation="vertical">-->
+    <!--                        <TextView-->
+    <!--                            android:layout_width="match_parent"-->
+    <!--                            android:layout_height="0dp"-->
+    <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+    <!--                            android:layout_weight="0.5"-->
+    <!--                            android:fontFamily="@font/josefin_sans"-->
+    <!--                            android:text="Sell Produce"-->
+    <!--                            android:textAlignment="center"-->
+    <!--                            android:textAllCaps="true"-->
+    <!--                            android:textColor="@android:color/black"-->
+    <!--                            android:textSize="15sp" />-->
+    <!--                    </LinearLayout>-->
 
-        <!--                        <ImageView-->
-        <!--                            android:layout_width="wrap_content"-->
-        <!--                            android:layout_height="wrap_content"-->
-        <!--                            android:layout_gravity="center"-->
-        <!--                            android:layout_marginTop="@dimen/margin_15"-->
-        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
-        <!--                            android:src="@drawable/ic_sell_produce" />-->
+    <!--                </androidx.cardview.widget.CardView>-->
 
-        <!--                        <TextView-->
-        <!--                            android:layout_width="match_parent"-->
-        <!--                            android:layout_height="0dp"-->
-        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
-        <!--                            android:layout_weight="0.5"-->
-        <!--                            android:fontFamily="@font/josefin_sans"-->
-        <!--                            android:text="Sell Produce"-->
-        <!--                            android:textAlignment="center"-->
-        <!--                            android:textAllCaps="true"-->
-        <!--                            android:textColor="@android:color/black"-->
-        <!--                            android:textSize="15sp" />-->
-        <!--                    </LinearLayout>-->
+    <!--            </LinearLayout>-->
 
-        <!--                </androidx.cardview.widget.CardView>-->
+    <!--        </ScrollView>-->
 
-        <!--            </LinearLayout>-->
-
-        <!--        </ScrollView>-->
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
