--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -31,6 +31,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
+            android:layout_marginTop="35dp"
+            android:paddingBottom="@dimen/dimen_20dp"
             android:paddingLeft="@dimen/dimen_20dp"
             android:paddingRight="@dimen/dimen_20dp">
 
@@ -39,7 +41,6 @@
                 android:id="@+id/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
@@ -65,10 +66,10 @@
                         <ImageView
                             android:id="@+id/breeding_stock_animal_image"
                             android:layout_width="match_parent"
-                            android:layout_height="55dp"
+                            android:layout_height="70dp"
                             android:layout_gravity="center"
                             android:layout_margin="@dimen/dimen_20dp"
-                            android:src="@drawable/ic_breeding_stock" />
+                            android:src="@drawable/ic_default_livestock_image" />
 
                         <TextView
                             android:id="@+id/tv_breeding_stock"
